# comms-middleware

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt  client.cpp
lib_comms/: CMakeLists.txt  Comms.cpp  Comms.h  CommsTypes.h  PubSubBackend.h  Publisher.h  PublisherImpl.h  Subscriber.h  SubscriberImpl.h  ThreadSafeQueue.h  Topics.h
lib_comms/zmq/: ZmqPubSubBackend.cpp  ZmqPubSubBackend.h  ZmqPublisher.cpp  ZmqPublisher.h  ZmqSubscriber.cpp  ZmqSubscriber.h
server/: CMakeLists.txt  main.cpp  server.cpp
test/: CMakeLists.txt  FakePubSubBackend.cpp  FakePublisher.h  testPayload.proto  test_middleware.cpp
test/fakes/: CMakeLists.txt  FakePubSubBackend.cpp  FakePubSubBackend.h  FakePublisher.cpp  FakeSubscriber.cpp  FakeSubscriber.h
